--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,101 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+*{
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #22254b;
+  color: white;
+  margin:0;
+}
+
+.movie{
+  width: 300px;
+  margin: 1rem;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+  overflow:hidden;
+  position:relative;
+  background-color: #373b69;
+}
+
+.movie-info{
+  display: flex;
+  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.movie img{
+  width: 100%;
+  object-fit: cover;
+  height: 400px;
+}
+
+.movie-container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.movie-over{
+  background-color: #abaece;
+  color: #22254b;
+  position:absolute;
+  padding: 1rem;
+  bottom:0;
+  left: 0;
+  right: 0;
+  transform: translateY(102%);
+  transition: transform 0.3s ease-in-out;
+  max-width: 100%;
+}
+
+.movie:hover .movie-over{
+  transform: translateX(0%);
+}
+
+
+header{
+  background-color: #373b69;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search{
+  font-size: 1.2rem;
+  border: 2px solid #22254b;
+  border-radius: 50px;
+  background-color: transparent;
+  color:white;
+  padding: 0.5rem 1.5rem;
+}
+
+.search:focus{
+  outline: none;
+}
+
+.tag{
+  background-color: #22254b;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-weight: bold;
+}
+
+.tag.green{
+  color: green;
+}
+
+.tag.orange{
+  color:orange;
+}
+
+.tag.red{
+  color:red;
 }
