--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
 }
 
 body{
-  background-color: #22254b;
-  color: white;
+  background-color: #d6d6d6;
+  /* color: white; */
   margin:0;
 }
 
@@ -70,9 +70,9 @@ header{
 
 .search{
   font-size: 1.2rem;
-  border: 2px solid #22254b;
+  border: 2px solid #0d0d0e;
   border-radius: 50px;
-  background-color: transparent;
+  background-color: #d6d6d6;
   color:white;
   padding: 0.5rem 1.5rem;
 }
@@ -82,7 +82,7 @@ header{
 }
 
 .tag{
-  background-color: #22254b;
+  background-color: #181a38;
   border-radius: 5px;
   padding: 0.5rem;
   font-weight: bold;
@@ -99,3 +99,4 @@ header{
 .tag.red{
   color:red;
 }
+
