--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ header{
   border: 2px solid #0d0d0e;
   border-radius: 50px;
   background-color: #d6d6d6;
-  color:white;
+  color: #373b69;
   padding: 0.5rem 1.5rem;
 }
 
